--- a/src/main/resources/Layouts/LoginView.fxml
+++ b/src/main/resources/Layouts/LoginView.fxml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1"
-          xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="Views.LoginView">
-
-    <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.LoginView">
    <children>
-      <Button mnemonicParsing="false" text="Button" />
+      <TextField id="loginField" fx:id="loginField" alignment="CENTER" opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
+         <effect>
+            <InnerShadow />
+         </effect>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </TextField>
+      <PasswordField id="passwordField" fx:id="passwordField" alignment="CENTER" opacity="0.75" promptText="password">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <effect>
+            <InnerShadow />
+         </effect>
+      </PasswordField>
+      <Button id="loginButton" fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" opacity="0.75" prefWidth="250.0" text="LOG IN" textOverrun="CENTER_ELLIPSIS" />
+      <Hyperlink id="registerLink" alignment="CENTER" prefWidth="250.0" text="Haven't got an account yet?">
+         <VBox.margin>
+            <Insets top="-10.0" />
+         </VBox.margin>
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Hyperlink>
    </children>
-</GridPane>
+   <padding>
+      <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+   </padding>
+</VBox>
