--- a/src/main/resources/Layouts/LoginView.fxml
+++ b/src/main/resources/Layouts/LoginView.fxml
@@ -9,7 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.LoginView">
+<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="Views.LoginViewImpl">
    <children>
       <TextField id="loginField" fx:id="loginField" alignment="CENTER"
                  opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
