--- a/src/main/resources/Layouts/RegisterView.fxml
+++ b/src/main/resources/Layouts/RegisterView.fxml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-      fx:controller="Views.Implementations.RegisterViewImpl" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="600.0"
+      prefWidth="400.0" spacing="10.0"
+      xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button mnemonicParsing="false" text="Button" />
+      <TextField id="LoginField" fx:id="loginField"
+                 alignment="CENTER" opacity="0.75"
+                 prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
+         <VBox.margin>
+            <Insets top="-50.0" />
+         </VBox.margin>
+      </TextField>
+      <PasswordField fx:id="passwordField" alignment="CENTER" opacity="0.75" promptText="password">
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
+      </PasswordField>
+      <PasswordField fx:id="onceMorePasswordField" alignment="CENTER" opacity="0.75" promptText="password (once more)">
+         <VBox.margin>
+            <Insets top="-5.0" />
+         </VBox.margin>
+      </PasswordField>
+      <Button alignment="CENTER" mnemonicParsing="false" prefWidth="250.0" text="Register" textAlignment="CENTER">
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin></Button>
    </children>
+   <padding>
+      <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
+   </padding>
 </VBox>
