--- a/src/main/resources/Layouts/LoginView.fxml
+++ b/src/main/resources/Layouts/LoginView.fxml
@@ -2,18 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="Views.Implementations.LoginViewImpl">
+<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
    <children>
-      <TextField id="loginField" fx:id="loginField" alignment="CENTER"
-                 opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
+      <TextField id="loginField" fx:id="loginField" alignment="CENTER" opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
          <effect>
             <InnerShadow />
          </effect>
@@ -29,15 +25,12 @@
             <InnerShadow />
          </effect>
       </PasswordField>
-      <Button id="loginButton" fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" opacity="0.75" prefWidth="250.0" text="LOG IN" textOverrun="CENTER_ELLIPSIS" />
-      <Hyperlink fx:id="registerLink" alignment="CENTER" minWidth="350.0" text="Haven't got an account yet?">
+      <Button id="loginButton" fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLogin" opacity="0.75" prefWidth="250.0" text="SIGN IN" textOverrun="CENTER_ELLIPSIS" />
+      <Button fx:id="registerButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onMoveToRegister" prefWidth="150.0" text="SIGN UP" textAlignment="CENTER">
          <VBox.margin>
-            <Insets top="-10.0" />
+            <Insets top="10.0" />
          </VBox.margin>
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Hyperlink>
+      </Button>
    </children>
    <padding>
       <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
