--- a/src/main/resources/Layouts/LoginView.fxml
+++ b/src/main/resources/Layouts/LoginView.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
+<VBox alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0"
+      xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="Views.Implementations.LoginViewImpl">
    <children>
       <TextField id="loginField" fx:id="loginField" alignment="CENTER" opacity="0.75" prefWidth="240.0" promptText="login" VBox.vgrow="NEVER">
          <effect>
