--- a/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
+++ b/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="javafx.scene.layout.VBox" prefHeight="360.0" prefWidth="200.0" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="javafx.scene.layout.VBox" prefHeight="360.0" prefWidth="200.0"
+         xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <TextField fx:id="imagesSearch" promptText="Search..." />
         <Separator />
