--- a/desktop-app/src/main/resources/Layouts/MainView.fxml
+++ b/desktop-app/src/main/resources/Layouts/MainView.fxml
@@ -3,6 +3,7 @@
 <?import Utils.controls.ImagesListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ToolBar?>
@@ -38,17 +39,18 @@
             </MenuButton>
             <Button fx:id="goToGenerateButton" mnemonicParsing="false" onAction="#onGoToGenerate" text="+" />
             <Button fx:id="fullButton" mnemonicParsing="false" onAction="#onFull" text="FULL" />
+            <Label fx:id="username" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: red;" text="Hello UJ" translateX="320.0" />
         </items>
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </ToolBar>
-      <HBox fx:id="contentBox" visible="true" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
+      <HBox fx:id="contentBox" prefHeight="100.0" prefWidth="200.0" visible="true" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <children>
              <ImagesListView fx:id="imagesListView" minWidth="0.0" prefHeight="320.0" prefWidth="200.0">
 
             </ImagesListView>
-            <HBox fx:id="rightPane" nodeOrientation="LEFT_TO_RIGHT" opacity="1.0" prefHeight="320.0" prefWidth="400.0" style="">
+            <HBox fx:id="rightPane" nodeOrientation="LEFT_TO_RIGHT" opacity="1.0" prefHeight="320.0" prefWidth="400.0">
                <children>
                   <ImageView fx:id="resultImage" fitHeight="320.0" fitWidth="320.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
