--- a/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
+++ b/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
@@ -8,6 +8,6 @@
     <children>
         <TextField fx:id="imagesSearch" promptText="Search..." />
         <Separator />
-        <ListView fx:id="imagesListView" prefHeight="1000.0" style="-fx-background-color: blue;" />
+        <ListView fx:id="imagesListView" prefHeight="1000.0" />
     </children>
 </fx:root>
