Show/Hide button fixed

--- a/desktop-app/src/main/resources/Layouts/MainView.fxml
+++ b/desktop-app/src/main/resources/Layouts/MainView.fxml
@@ -38,7 +38,7 @@
                 </items>
             </MenuButton>
             <Button fx:id="goToGenerateButton" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#onGoToGenerate" prefHeight="25.0" prefWidth="25.0" text="+" />
-            <Button fx:id="fullButton" mnemonicParsing="false" onAction="#onFull" text="FULL" />
+            <Button fx:id="fullButton" mnemonicParsing="false" onAction="#onFull" text="HIDE" minWidth="70.0" prefWidth="70.0" />
             <Label fx:id="username" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: red;" text="Hello UJ" translateX="320.0" />
         </items>
          <GridPane.margin>
@@ -54,7 +54,7 @@
                <children>
                    <Label fx:id="photoName" alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="200.0" text="LOL">
                      <VBox.margin>
-                        <Insets left="97.0" top="7.0" />
+                        <Insets left="100.0" top="7.0" />
                      </VBox.margin></Label>
                   <ImageView fx:id="resultImage" fitHeight="310.0" fitWidth="310.0" pickOnBounds="true" preserveRatio="true">
                      <VBox.margin>
