--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -36,11 +36,31 @@
             <Insets left="5.0" right="5.0" />
          </padding>
       </Label>
-      <ImageView fx:id="styleImage" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
-          <GridPane.margin>
-              <Insets />
-          </GridPane.margin>
-      </ImageView>
+      <GridPane prefHeight="400.0" GridPane.columnIndex="2">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
+             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
+         </columnConstraints>
+         <rowConstraints>
+             <RowConstraints minHeight="125.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="150.0" vgrow="SOMETIMES" />
+             <RowConstraints minHeight="125.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fx:id="styleImage" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+             <Button fx:id="leftStyleImage" onAction="#onShiftLeftStyleImage" minHeight="25.0" minWidth="25.0" prefHeight="25.0" prefWidth="25.0" text="&lt;" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="60.0" left="20.0" />
+               </GridPane.margin></Button>
+             <Button fx:id="rightStyleImage" onAction="#onShiftRightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" prefHeight="25.0" prefWidth="25.0" text="&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="60.0" left="30.0" />
+               </GridPane.margin></Button>
+         </children>
+      </GridPane>
       <Button fx:id="generateButton" mnemonicParsing="false" onAction="#onGenerate" style="-fx-background-color: orange;" text="=" textAlignment="CENTER" GridPane.columnIndex="3">
          <GridPane.margin>
             <Insets left="19.0" />
