--- a/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
+++ b/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root prefHeight="360.0" prefWidth="200.0" stylesheets="@../stylesheets/imagesListViewStyle.css" type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.172-ea">
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<fx:root prefHeight="360.0" prefWidth="200.0"
+         stylesheets="@../stylesheets/imagesListViewStyle.css" type="javafx.scene.layout.VBox"
+         xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <TextField fx:id="imagesSearch" promptText="Search..." />
+        <GridPane>
+            <children>
+                <TextField fx:id="imagesSearch" minWidth="90.0" prefWidth="90.0" promptText="Search..." GridPane.columnIndex="0" />
+                <ComboBox fx:id="sortBy" styleClass="sorting" prefWidth="110.0" minWidth="110.0" promptText="Sort by" GridPane.columnIndex="1" >
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Name (a-z)" />
+                            <String fx:value="Name (z-a)" />
+                            <String fx:value="Date (0-9)" />
+                            <String fx:value="Date (9-0)" />
+                        </FXCollections>
+                    </items>
+                </ComboBox>
+            </children>
+            <columnConstraints>
+                <ColumnConstraints minWidth="90.0" prefWidth="90.0" />
+                <ColumnConstraints minWidth="110.0" prefWidth="110.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints />
+            </rowConstraints>
+        </GridPane>
         <Separator />
-        <ListView styleClass="imagesListView" fx:id="imagesListView" prefHeight="1000.0" />
+        <ListView fx:id="imagesListView" prefHeight="1000.0" styleClass="imagesListView" />
     </children>
 </fx:root>
