--- a/desktop-app/src/main/resources/Layouts/ImageListCell.fxml
+++ b/desktop-app/src/main/resources/Layouts/ImageListCell.fxml
@@ -5,7 +5,7 @@
 
 <AnchorPane prefHeight="30.0" prefWidth="150.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-      <Label fx:id="photoName" styleClass="photoNameLabel" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-      <Label fx:id="date" styleClass="dateLabel" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefWidth="70.0" textFill="#00000046" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="5.0" />
+      <Label fx:id="photoName" prefWidth="100.0" styleClass="photoNameLabel" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+      <Label fx:id="date" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefWidth="70.0" styleClass="dateLabel" textFill="#00000046" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="5.0" />
     </children>
 </AnchorPane>
