--- a/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
+++ b/desktop-app/src/main/resources/Layouts/ImagesListView.fxml
@@ -6,19 +6,17 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<fx:root prefHeight="360.0" prefWidth="200.0"
-         stylesheets="@../stylesheets/imagesListViewStyle.css" type="javafx.scene.layout.VBox"
-         xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="360.0" prefWidth="200.0" stylesheets="@../stylesheets/imagesListViewStyle.css" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <GridPane>
             <children>
-                <TextField fx:id="imagesSearch" minWidth="90.0" prefWidth="90.0" promptText="Search..." GridPane.columnIndex="0" />
-                <ComboBox fx:id="sortBy" styleClass="sorting" prefWidth="110.0" minWidth="110.0" promptText="Sort by" GridPane.columnIndex="1" >
+                <TextField fx:id="imagesSearch" minWidth="110.0" prefWidth="110.0" promptText="Search..." GridPane.columnIndex="0" />
+                <ComboBox fx:id="sortBy" minHeight="25.0" minWidth="90.0" prefHeight="25.0" prefWidth="90.0" promptText="Sort by" styleClass="sorting" GridPane.columnIndex="1">
                     <items>
                         <FXCollections fx:factory="observableArrayList">
                             <String fx:value="Name (a-z)" />
@@ -30,8 +28,8 @@
                 </ComboBox>
             </children>
             <columnConstraints>
-                <ColumnConstraints minWidth="90.0" prefWidth="90.0" />
                 <ColumnConstraints minWidth="110.0" prefWidth="110.0" />
+                <ColumnConstraints minWidth="90.0" prefWidth="90.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints />
