--- a/desktop-app/src/main/resources/Layouts/MainView.fxml
+++ b/desktop-app/src/main/resources/Layouts/MainView.fxml
@@ -3,11 +3,14 @@
 <?import Utils.controls.ImagesListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -25,7 +28,7 @@
     <RowConstraints minHeight="10.0" prefHeight="360.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ToolBar maxHeight="Infinity" maxWidth="Infinity" prefHeight="40.0" prefWidth="600.0" style="-fx-background-color: yellow;" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+      <ToolBar fx:id="toolbar" maxHeight="Infinity" maxWidth="Infinity" prefHeight="40.0" prefWidth="600.0" style="-fx-background-color: yellow;" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
         <items>
             <MenuButton fx:id="settingsButton" mnemonicParsing="false" prefHeight="20.0" prefWidth="80.0" text="Settings">
                <font>
@@ -38,7 +41,7 @@
                 </items>
             </MenuButton>
             <Button fx:id="goToGenerateButton" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#onGoToGenerate" prefHeight="25.0" prefWidth="25.0" text="+" />
-            <Button fx:id="fullButton" mnemonicParsing="false" onAction="#onFull" text="HIDE" minWidth="70.0" prefWidth="70.0" />
+            <Button fx:id="fullButton" minWidth="70.0" mnemonicParsing="false" onAction="#onFull" prefWidth="70.0" text="HIDE" />
             <Label fx:id="username" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: red;" text="Hello UJ" translateX="300.0" />
         </items>
          <GridPane.margin>
@@ -65,5 +68,41 @@
             </VBox>
          </children>
       </HBox>
+       <DialogPane fx:id="settingsDialog" prefHeight="200.0" prefWidth="300.0" style="-fx-border-color: black; -fx-background-color: lightgreen;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+           <header>
+            <AnchorPane nodeOrientation="LEFT_TO_RIGHT">
+               <children>
+                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="99.0" minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="200.0" text="Change your password" textAlignment="CENTER" AnchorPane.leftAnchor="99.0" />
+                   <Button fx:id="exitSettingsButton" minHeight="39.0" minWidth="39.0" onAction="#onCloseSettingsDialog" prefHeight="39.0" prefWidth="39.0" text="X" textAlignment="CENTER" AnchorPane.rightAnchor="0.0" />
+               </children>
+            </AnchorPane>
+               
+           </header>
+           <content>
+               <VBox alignment="CENTER">
+                   <children>
+                       <PasswordField fx:id="oldPasswordField" alignment="CENTER" opacity="0.75" promptText="Old password">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin></PasswordField>
+                       <PasswordField fx:id="newPasswordField" alignment="CENTER" opacity="0.75" promptText="New password">
+                     <VBox.margin>
+                        <Insets top="8.0" />
+                     </VBox.margin></PasswordField>
+                       <PasswordField fx:id="onceMoreNewPasswordField" alignment="CENTER" opacity="0.75" promptText="New password (once more)">
+                     <VBox.margin>
+                        <Insets top="2.0" />
+                     </VBox.margin></PasswordField>
+                       <Button fx:id="changePasswordButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onChangePassword" prefWidth="200.0" text="Change" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets top="8.0" />
+                     </VBox.margin></Button>
+                   </children>
+               </VBox>
+           </content>
+         <GridPane.margin>
+            <Insets left="-100.0" right="100.0" />
+         </GridPane.margin>
+       </DialogPane>
    </children>
 </GridPane>
