--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -3,96 +3,99 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <GridPane alignment="CENTER" maxHeight="Infinity" maxWidth="Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.GeneratorViewImpl">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" prefWidth="150.0" />
-        <ColumnConstraints hgrow="SOMETIMES" prefWidth="75.0" />
-        <ColumnConstraints hgrow="SOMETIMES" prefWidth="150.0" />
-        <ColumnConstraints hgrow="SOMETIMES" prefWidth="75.0" />
-        <ColumnConstraints hgrow="SOMETIMES" prefWidth="150.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="250.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" prefWidth="250.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints />
+        <RowConstraints prefHeight="40.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="20.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="240.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="100.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-      <ImageView fx:id="contentImage" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+        <VBox alignment="CENTER" prefHeight="20.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <children>
+                <Slider maxWidth="400.0" minWidth="400.0" prefWidth="400.0" />
+            </children>
+        </VBox>
+        <AnchorPane prefHeight="240.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+            <ImageView fx:id="contentImage" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="15.0">
+            <GridPane.margin>
+                <Insets />
+            </GridPane.margin>
+            </ImageView>
+        </AnchorPane>
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: lightgreen;" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-      </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" style="-fx-background-color: lightgreen;" text="+" textAlignment="CENTER" GridPane.columnIndex="1">
-         <GridPane.margin>
-            <Insets left="27.0" />
+            <Insets left="24.0" />
          </GridPane.margin>
          <padding>
             <Insets left="5.0" right="5.0" />
          </padding>
+         <font>
+            <Font size="30.0" />
+         </font>
       </Label>
-      <GridPane prefHeight="400.0" GridPane.columnIndex="2">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
-             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
-         </columnConstraints>
-         <rowConstraints>
-             <RowConstraints minHeight="125.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="150.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="125.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <ImageView fx:id="styleImage" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-             <Button fx:id="leftStyleImage" onAction="#onShiftLeftStyleImage" minHeight="25.0" minWidth="25.0" prefHeight="25.0" prefWidth="25.0" text="&lt;" GridPane.columnIndex="0" GridPane.rowIndex="2">
+            <GridPane alignment="CENTER" prefHeight="240.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets />
+                </GridPane.margin>
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints minHeight="200.0" vgrow="SOMETIMES" />
+                    <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
+                </rowConstraints>
+                <children>
+                    <ImageView fx:id="styleImage" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0">
                <GridPane.margin>
-                  <Insets bottom="60.0" left="20.0" />
-               </GridPane.margin></Button>
-             <Button fx:id="rightStyleImage" onAction="#onShiftRightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" prefHeight="25.0" prefWidth="25.0" text="&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="60.0" left="30.0" />
-               </GridPane.margin></Button>
-         </children>
-      </GridPane>
-      <Button fx:id="generateButton" mnemonicParsing="false" onAction="#onGenerate" style="-fx-background-color: orange;" text="=" textAlignment="CENTER" GridPane.columnIndex="3">
-         <GridPane.margin>
-            <Insets left="19.0" />
-         </GridPane.margin>
-      </Button>
-      <GridPane prefHeight="400.0" GridPane.columnIndex="4">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints prefHeight="125.0" vgrow="SOMETIMES" />
-             <RowConstraints prefHeight="150.0" vgrow="SOMETIMES" />
-             <RowConstraints prefHeight="125.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-             <TextField fx:id="photoName" alignment="CENTER" prefWidth="150.0" promptText="Name a photo" GridPane.rowIndex="0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets top="40.0" />
-               </GridPane.margin></TextField>
-            <ImageView fx:id="generatedImage" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
-            <AnchorPane GridPane.rowIndex="2">
-               <children>
-                  <Button fx:id="saveButton" mnemonicParsing="false" text="SAVE" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="20.0" />
-               </children>
-            </AnchorPane>
-         </children>
-      </GridPane>
+                  <Insets left="25.0" top="30.0" />
+               </GridPane.margin></ImageView>
+                    <Button fx:id="leftStyleImage" minHeight="25.0" minWidth="25.0" onAction="#onShiftLeftStyleImage" prefHeight="25.0" prefWidth="25.0" text="&lt;" GridPane.columnIndex="0" GridPane.rowIndex="1">
+                        <GridPane.margin>
+                            <Insets left="25.0" top="20.0" />
+                        </GridPane.margin></Button>
+                    <Button fx:id="rightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" onAction="#onShiftRightStyleImage" prefHeight="25.0" prefWidth="25.0" text="&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <GridPane.margin>
+                            <Insets left="75.0" top="20.0" />
+                        </GridPane.margin></Button>
+                </children>
+            </GridPane>
+
+      <VBox alignment="TOP_CENTER" prefHeight="140.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="3">
+          <children>
+              <TextField fx:id="photoName" alignment="TOP_CENTER" maxWidth="150.0" prefWidth="150.0" promptText="Name a photo">
+                  <font>
+                      <Font size="14.0" />
+                  </font>
+                  <GridPane.margin>
+                      <Insets top="40.0" />
+                  </GridPane.margin>
+                  <VBox.margin>
+                      <Insets top="15.0" />
+                  </VBox.margin>
+              </TextField>
+              <Button fx:id="generateButton" alignment="CENTER" mnemonicParsing="false" onAction="#onGenerate" text="GENERATE">
+                  <VBox.margin>
+                      <Insets top="5.0" />
+                  </VBox.margin>
+              </Button>
+          </children>
+      </VBox>
    </children>
 </GridPane>
